--- a/PLAYER3/Second31.html
+++ b/PLAYER3/Second31.html
@@ -143,6 +143,11 @@ function colourBlock(){
   
   function checkForPlayer() {
     if (lettersToAdd2.length === 0 && frameCount > nextLetterTime) {
+      fetch("http://172.20.10.4:3000/colour", {
+      method: "POST", // or 'PUT'
+      headers: {"Content-Type": "application/json"},
+      body: JSON.stringify({colour: 'B', value: 80}),
+    })
     fetch("http://172.20.10.4:3000/colour")
     .then(res => res.json())
     .then(res => {
