--- a/PLAYER2/Second2A.html
+++ b/PLAYER2/Second2A.html
@@ -142,6 +142,11 @@ function colourBlock(){
 
   
   function checkForPlayer() {
+    fetch("http://172.20.10.4:3000/colour", {
+      method: "POST", // or 'PUT'
+      headers: {"Content-Type": "application/json"},
+      body: JSON.stringify({colour: 'G', value: 183}),
+    })
     if (lettersToAdd2.length === 0 && frameCount > nextLetterTime) {
     fetch("http://172.20.10.4:3000/colour")
     .then(res => res.json())
@@ -162,3 +167,4 @@ function colourBlock(){
     </script>
 </body>
 </html>
+
